ui: fix vertical alignment of code blocks, increase line height

--- a/src/app.css
+++ b/src/app.css
@@ -14,6 +14,7 @@ body {
     color: ivory;
     --border-radius: 3px;
     --transition-duration: 250ms;
+    line-height: 1.5;
 }
 
 code {
@@ -22,6 +23,7 @@ code {
     padding: 10px;
     border-radius: var(--border-radius);
     font-family: "Courier Prime", monospace;
+    vertical-align: middle;
 }
 ul{
     list-style-position: inside;
